...
    <string name="btn_password_forget">Forgot password?</string>
    <string name="btn_link_to_register">Don\'t Have an Account? Sign up!</string>
    <string name="text_login">Welcome</string>
    <string name="text_registration">Create new account</string>
    <string name="error_input_confirm_password">"Passwords do not match"</string>
    <string name="error_input_password">"Password is too short"</string>
    <string name="error_input_email">Invalid email address</string>

    <string name="nav_bar_item_1">Noise map</string>
    <string name="nav_bar_item_2">My trips</string>
    <string name="nav_bar_item_3">Saved trips</string>
    <string name="nav_bar_item_4">Wind forecast</string>
    <string name="nav_bar_item_5">Account info</string>
...
